[package]
name = "sqlx-actix-streaming"
version = "0.1.0"
authors = ["rich-murphey <rich@murphey.org>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = [ "log" ]

[dependencies]
bytes = "1.1.0"
futures = "0.3.18"
log = { version = "0.4.14", optional = true }
ouroboros = "0.14.0"
serde = "1.0.130"
serde_json = "1.0.72"
