[package]
authors = ["rich-murphey <rich@murphey.org>"]
name = "widgets"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.1"
anyhow = "1"
dotenv = "0"
env_logger = "0"
futures = "0"
log = "0"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sqlx = { git = "https://github.com/launchbadge/sqlx", features = [ "postgres", "json", "chrono", "runtime-actix-rustls" ]}
sqlx-actix-streaming = { path = "..", features = ["macros"] }
sys-info = "0"
thiserror = "1"
